--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "banking-portal-app",
   "version": "1.0.0",
-  "description": "In this project you’ll build a simple Banking Portal with Node & Express. There will be seven different routes that will include index, profile, savings, checking, credit, transfer and payment. We'll provide you with some starter code that includes several view templates. You'll use Node's built-in `fs` library to read and write data. We will also use the Express router to make the application more modular.",
+  "description": "A simple Banking Portal with Node & Express.",
   "main": "app.js",
   "scripts": {
     "start": "nodemon app.js"
